gobmkida/g1/gtp_test_eyeshape
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/gtp_test_eyeshape/src/interface/play_gtp.c:3402:22: error: use of undeclared identifier 'pdfa'
return gtp_success( &pdfa.name[70]); 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/gtp_test_eyeshape/src/obj/2/play_gtp.o] Error 1
